frame/support/test/tests/construct_runtime_ui/invalid_token_after_module.stderr
error: expected `::`
 --> $DIR/invalid_token_after_module.rs:9:18
  |
9 |         system: System ?
  |                        ^
