frame/support/test/tests/construct_runtime_ui/invalid_token_after_module.rs
use frame_support::construct_runtime;

construct_runtime! {
	pub struct Runtime where
		Block = Block,
		NodeBlock = Block,
		UncheckedExtrinsic = UncheckedExtrinsic
	{
		system: System ?
	}
}

fn main() {}
